# budget-tracker

./: .gitignore  .rusty-hook.toml  Cargo.toml
src/: consts.rs  main.rs  utils.rs
src/csv/: mod.rs  persister.rs
src/csv/models/: assigned_transaction.rs  budget_item.rs  budget_item_type.rs  comparable_transaction.rs  deserializers.rs  list_item.rs  mod.rs  transaction.rs
src/csv/parsers/: assigned_transactions.rs  budget_csv.rs  mod.rs  transaction_csv.rs
src/csv/post_processing/: budget_items.rs  mod.rs  transactions.rs
src/csv_parser/: budget_csv.rs  mod.rs  transaction_csv.rs
src/csv_parser/models/: deserializers.rs  mod.rs
src/ui/: app.rs  app_builder.rs  errors.rs  mod.rs  state.rs  wrapper.rs
src/ui/components/: activity_area_layout.rs  layout.rs  main_layout.rs  mod.rs  scrollable_list.rs  transaction_list.rs
src/ui/components/layouts/: activity_area_layout.rs  balance_layout.rs  main_layout.rs  mod.rs  totals_layout.rs  transaction_assignment_layout.rs
src/ui/components/layouts/totals/: mod.rs  total_information.rs  totals_layout.rs
src/ui/components/layouts/totals_layout/: total_information.rs  totals_layout.rs
src/ui/components/reusable/: chart.rs  mod.rs  popup.rs  scrollable_list.rs  tabs.rs
