[package]
name = "budget-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
encoding = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rusty-hook = "^0.11.2"