[package]
name = "budget-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "4.0.1"
color-eyre = "0.6.3"
crossterm = "0.27.0"
csv = "1.1"
encoding = "0.2"
notify = "6.1.1"
piechart = "1.0.0"
ratatui = "0.26.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
